Uploading my project,almost 70% done

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,19 @@
+// {
+//   "compilerOptions": {
+//     "baseUrl": ".",
+
+//     "paths": {
+//       "@/app/*":["./src/app/*"],
+//       "@/models/*":["./src/models/*"],
+//       "@/components/*": ["./src/components/*"]
+//     }
+//   }
+// }
+
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
+    "compilerOptions": {
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     }
-  }
 }
